--- a/estilo.css
+++ b/estilo.css
@@ -85,7 +85,7 @@ margin-bottom:10px;
 .carta {padding-top: 5%; padding-bottom: 5%}
 
 .banner {
-	background-image: url("https://github.com/micraneo/guia_responsiva/blob/238d9b97ac51433ce2d41cd9abac633d5ebb66d2/banner.jpg");
+	background-image: url("https://micraneo.github.io/guia_responsiva/banner.jpg");
 	height: 200px;
 	background-size: cover;
 	background-position: center;
